# termgraph

./: .gitignore  .travis.yml  README.md  animation_example.py  example_btc_server.py  example_data.py  graph.py  main.py  pyproject.toml  requirements.txt  static_example.py  test_graph.py
examples/: __init__.py  animation.py  data.csv  static.py
termgraph/: __init__.py
tests/: test_examples.py  test_termgraph.py
