[tool.poetry]
name = "termgraph"
version = "0.1.0"
description = "Terminal candle stick graph library"
authors = ["Sebastian Geisler <github@gnet.me>"]

[tool.poetry.dependencies]
python = "^3.5"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
